# duckdb-fastapi

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/duckdb_fastapi/: __init__.py  to_api.py  to_duckdb.py
tests/: test_to_api.py  test_to_duckdb.py
