[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duckdb-fastapi"
version = "0.1.0"
description = "A FastAPI application with DuckDB integration"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["duckdb", "fastapi", "api"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "duckdb>=0.9.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "ruff>=0.1.14",
]

[project.urls]
Homepage = "https://github.com/yourusername/duckdb-fastapi"
Repository = "https://github.com/yourusername/duckdb-fastapi.git"

[tool.hatch.build.targets.wheel]
packages = ["src/duckdb_fastapi"]
